v1.0.0/modules/schema/pages/class/MarketRegionResults.adoc
= `MarketRegionResults`
:toclevels: 4


+++Provides all Region Ancillary Service results for the DA and RT markets. The specific data is commodity type (Regulation Up, Regulation Down, Spinning Reserve, Non-spinning Reserve, or Total Up reserves) based for the cleared MW, cleared price, and total capacity required for the region.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:MarketRegionResults`


| CIM standard (perspective)
| IEC62325 (Market)



|===

== Class hierarchy
* *`MarketRegionResults`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
MarketRegionResults {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



MarketRegion {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



MarketProduct {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



AncillaryServiceClearing {
  style {
    fill: "#fffbef"
    shadow: true
  }
}




MarketRegionResults -> MarketRegion: MarketRegion


MarketRegionResults -> MarketProduct: MarketProduct


MarketRegionResults -> AncillaryServiceClearing: AncillaryServiceClearing


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<MarketRegion,`MarketRegion`>>
| 1
| xref::class/MarketRegion.adoc[`MarketRegion`]
| n/a

| <<AncillaryServiceClearing,`AncillaryServiceClearing`>>
| 0..1
| xref::class/AncillaryServiceClearing.adoc[`AncillaryServiceClearing`]
| n/a

| <<MarketProduct,`MarketProduct`>>
| 0..1
| xref::class/MarketProduct.adoc[`MarketProduct`]
| n/a

| <<clearedMW,`clearedMW`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Cleared generation Value in MW.  For AS, this value is clearedMW = AS Total.  For AS, clearedMW - selfScheduleMW = AS Procured+++

| <<clearedPrice,`clearedPrice`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Marginal Price ($/MW) for the commodity (Energy, Regulation Up, Regulation Down, Spinning Reserve, or Non-spinning reserve) based on the pricing run.+++

| <<dispatchCtMW,`dispatchCtMW`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Dispatchable MW for Combustion units.+++

| <<dispatchHydroMW,`dispatchHydroMW`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Dispatchable MW for Hydro units.+++

| <<dispatchRate,`dispatchRate`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Dispatch rate in MW/minutes.+++

| <<dispatchSteamMW,`dispatchSteamMW`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Dispatchable MW for Steam units.+++

| <<imbalanceEnergyBias,`imbalanceEnergyBias`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Imbalance Energy Bias (MW) by Time Period (5' only)+++

| <<limitFlag,`limitFlag`>>
| 0..1
| xref::enumeration/ResourceLimitIndicator.adoc[`ResourceLimitIndicator`]
| +++Locational AS Flags indicating whether the Upper or Lower Bound limit of the AS regional procurment is binding+++

| <<lumpyIndicator,`lumpyIndicator`>>
| 0..1
| xref::enumeration/YesNo.adoc[`YesNo`]
| +++The "Lumpy Flag"(Y/N)  indicates whether the resource that sets the price is a lumpy generator by hour over the time horizon.

Only applicable for the Day Ahead Market+++

| <<maxSufficiencyIndex,`maxSufficiencyIndex`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Region requirement maximum limit+++

| <<minSufficiencyIndex,`minSufficiencyIndex`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Region requirement minimum limit+++

| <<reqMaxMW,`reqMaxMW`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Region requirement maximum limit+++

| <<reqMinMW,`reqMinMW`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Region requirement minimum limit+++

| <<selfScheduleMW,`selfScheduleMW`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Aof AS, selfScheduleMW = AS Self-Provided+++
|===

'''


//[discrete]
[#AncillaryServiceClearing]
=== `AncillaryServiceClearing`


[cols="h,4",width=65%]
|===
| URI
| `cim:MarketRegionResults.AncillaryServiceClearing`
| Cardinality
| 0..1
| Type
| xref::class/AncillaryServiceClearing.adoc[`AncillaryServiceClearing`]


|===

//[discrete]
[#clearedMW]
=== `clearedMW`
+++Cleared generation Value in MW.  For AS, this value is clearedMW = AS Total.  For AS, clearedMW - selfScheduleMW = AS Procured+++

[cols="h,4",width=65%]
|===
| URI
| `cim:MarketRegionResults.clearedMW`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#clearedPrice]
=== `clearedPrice`
+++Marginal Price ($/MW) for the commodity (Energy, Regulation Up, Regulation Down, Spinning Reserve, or Non-spinning reserve) based on the pricing run.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:MarketRegionResults.clearedPrice`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#dispatchCtMW]
=== `dispatchCtMW`
+++Dispatchable MW for Combustion units.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:MarketRegionResults.dispatchCtMW`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#dispatchHydroMW]
=== `dispatchHydroMW`
+++Dispatchable MW for Hydro units.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:MarketRegionResults.dispatchHydroMW`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#dispatchRate]
=== `dispatchRate`
+++Dispatch rate in MW/minutes.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:MarketRegionResults.dispatchRate`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#dispatchSteamMW]
=== `dispatchSteamMW`
+++Dispatchable MW for Steam units.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:MarketRegionResults.dispatchSteamMW`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#imbalanceEnergyBias]
=== `imbalanceEnergyBias`
+++Imbalance Energy Bias (MW) by Time Period (5' only)+++

[cols="h,4",width=65%]
|===
| URI
| `cim:MarketRegionResults.imbalanceEnergyBias`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#limitFlag]
=== `limitFlag`
+++Locational AS Flags indicating whether the Upper or Lower Bound limit of the AS regional procurment is binding+++

[cols="h,4",width=65%]
|===
| URI
| `cim:MarketRegionResults.limitFlag`
| Cardinality
| 0..1
| Type
| xref::enumeration/ResourceLimitIndicator.adoc[`ResourceLimitIndicator`]


|===

//[discrete]
[#lumpyIndicator]
=== `lumpyIndicator`
+++The "Lumpy Flag"(Y/N)  indicates whether the resource that sets the price is a lumpy generator by hour over the time horizon.

Only applicable for the Day Ahead Market+++

[cols="h,4",width=65%]
|===
| URI
| `cim:MarketRegionResults.lumpyIndicator`
| Cardinality
| 0..1
| Type
| xref::enumeration/YesNo.adoc[`YesNo`]


|===

//[discrete]
[#MarketProduct]
=== `MarketProduct`


[cols="h,4",width=65%]
|===
| URI
| `cim:MarketRegionResults.MarketProduct`
| Cardinality
| 0..1
| Type
| xref::class/MarketProduct.adoc[`MarketProduct`]


|===

//[discrete]
[#MarketRegion]
=== `MarketRegion`


[cols="h,4",width=65%]
|===
| URI
| `cim:MarketRegionResults.MarketRegion`
| Cardinality
| 1
| Type
| xref::class/MarketRegion.adoc[`MarketRegion`]


|===

//[discrete]
[#maxSufficiencyIndex]
=== `maxSufficiencyIndex`
+++Region requirement maximum limit+++

[cols="h,4",width=65%]
|===
| URI
| `cim:MarketRegionResults.maxSufficiencyIndex`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#minSufficiencyIndex]
=== `minSufficiencyIndex`
+++Region requirement minimum limit+++

[cols="h,4",width=65%]
|===
| URI
| `cim:MarketRegionResults.minSufficiencyIndex`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#reqMaxMW]
=== `reqMaxMW`
+++Region requirement maximum limit+++

[cols="h,4",width=65%]
|===
| URI
| `cim:MarketRegionResults.reqMaxMW`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#reqMinMW]
=== `reqMinMW`
+++Region requirement minimum limit+++

[cols="h,4",width=65%]
|===
| URI
| `cim:MarketRegionResults.reqMinMW`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#selfScheduleMW]
=== `selfScheduleMW`
+++Aof AS, selfScheduleMW = AS Self-Provided+++

[cols="h,4",width=65%]
|===
| URI
| `cim:MarketRegionResults.selfScheduleMW`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===


